--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <title>叢林裡的海獺</title>
-  <style>
-    body {
-      margin: 0;
-      background: #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    canvas {
-      border: 2px solid #000;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>叢林裡的海獺</title>
+<style>
+body {
+  margin: 0;
+  background: #111;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+canvas {
+  border: 2px solid #000;
+  background: #2e7d32;
+}
+</style>
 </head>
 <body>
 
@@ -25,18 +26,15 @@
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-// 載入圖片
+// ⚠️ 請依你實際檔名修改這裡
 const bgImage = new Image();
-bgImage.src = "images/jungle.jpg";
+bgImage.src = "images/jungle.jfif";
 
 const otterImage = new Image();
-otterImage.src = "images/otter.png";
+otterImage.src = "images/otter.jfif";
 
-// 河流設定
-const river = {
-  y: 260,
-  height: 120
-};
+// 河
+const river = { y: 260, height: 120 };
 
 // 海獺
 const otter = {
@@ -45,7 +43,7 @@ const otter = {
   width: 90,
   height: 60,
   speed: 4,
-  floatOffset: 0
+  float: 0
 };
 
 const keys = {};
@@ -53,64 +51,59 @@ window.addEventListener("keydown", e => keys[e.key] = true);
 window.addEventListener("keyup", e => keys[e.key] = false);
 
 function update() {
-  if (keys["ArrowUp"]) otter.y -= otter.speed;
-  if (keys["ArrowDown"]) otter.y += otter.speed;
   if (keys["ArrowLeft"]) otter.x -= otter.speed;
   if (keys["ArrowRight"]) otter.x += otter.speed;
+  if (keys["ArrowUp"]) otter.y -= otter.speed;
+  if (keys["ArrowDown"]) otter.y += otter.speed;
 
-  // 限制在河裡
   otter.x = Math.max(0, Math.min(canvas.width - otter.width, otter.x));
   otter.y = Math.max(
     river.y,
     Math.min(river.y + river.height - otter.height, otter.y)
   );
 
-  // 游泳漂浮動畫
-  otter.floatOffset += 0.05;
+  otter.float += 0.05;
 }
 
 function draw() {
-  // 背景
-  ctx.drawImage(bgImage, 0, 0, canvas.width, canvas.height);
-
-  // 河流
-  ctx.fillStyle = "rgba(33, 150, 243, 0.35)";
-  ctx.fillRect(0, river.y, canvas.width, river.height);
-
-  // 波紋
-  ctx.strokeStyle = "rgba(255,255,255,0.4)";
-  for (let i = 0; i < 12; i++) {
-    ctx.beginPath();
-    ctx.moveTo(i * 80, river.y + 30);
-    ctx.lineTo(i * 80 + 40, river.y + 50);
-    ctx.stroke();
+  // 背景（如果圖片失敗就畫綠色）
+  if (bgImage.complete && bgImage.naturalWidth !== 0) {
+    ctx.drawImage(bgImage, 0, 0, canvas.width, canvas.height);
+  } else {
+    ctx.fillStyle = "#4caf50";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
   }
 
-  // 海獺（帶漂浮）
-  const floatY = Math.sin(otter.floatOffset) * 4;
-  ctx.drawImage(
-    otterImage,
-    otter.x,
-    otter.y + floatY,
-    otter.width,
-    otter.height
-  );
+  // 河
+  ctx.fillStyle = "rgba(33,150,243,0.4)";
+  ctx.fillRect(0, river.y, canvas.width, river.height);
+
+  // 海獺
+  const floatY = Math.sin(otter.float) * 4;
+  if (otterImage.complete && otterImage.naturalWidth !== 0) {
+    ctx.drawImage(
+      otterImage,
+      otter.x,
+      otter.y + floatY,
+      otter.width,
+      otter.height
+    );
+  } else {
+    ctx.fillStyle = "#6d4c41";
+    ctx.fillRect(otter.x, otter.y, otter.width, otter.height);
+  }
 }
 
-function gameLoop() {
+function loop() {
   update();
   draw();
-  requestAnimationFrame(gameLoop);
+  requestAnimationFrame(loop);
 }
 
-// 確保圖片載入完成再開始
-let loaded = 0;
-[bgImage, otterImage].forEach(img => {
-  img.onload = () => {
-    loaded++;
-    if (loaded === 2) gameLoop();
-  };
-});
+bgImage.onerror = () => console.error("❌ 背景圖片載入失敗");
+otterImage.onerror = () => console.error("❌ 海獺圖片載入失敗");
+
+loop();
 </script>
 
 </body>
