--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@ body {
 }
 canvas {
   border: 2px solid #000;
-  background: #2e7d32;
 }
 </style>
 </head>
@@ -26,12 +25,13 @@ canvas {
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-// ⚠️ 請依你實際檔名修改這裡
+// 背景圖片
 const bgImage = new Image();
-bgImage.src = "images/jungle.jfif";
+bgImage.src = "images/jungle.jpg";
 
+// 海獺圖片
 const otterImage = new Image();
-otterImage.src = "images/otter.jfif";
+otterImage.src = "images/otter.png";
 
 // 河
 const river = { y: 260, height: 120 };
@@ -50,6 +50,20 @@ const keys = {};
 window.addEventListener("keydown", e => keys[e.key] = true);
 window.addEventListener("keyup", e => keys[e.key] = false);
 
+let imagesLoaded = 0;
+function checkLoaded() {
+  imagesLoaded++;
+  if (imagesLoaded === 2) {
+    requestAnimationFrame(loop);
+  }
+}
+
+bgImage.onload = checkLoaded;
+otterImage.onload = checkLoaded;
+
+bgImage.onerror = () => alert("背景圖片載入失敗");
+otterImage.onerror = () => alert("海獺圖片載入失敗");
+
 function update() {
   if (keys["ArrowLeft"]) otter.x -= otter.speed;
   if (keys["ArrowRight"]) otter.x += otter.speed;
@@ -66,32 +80,19 @@ function update() {
 }
 
 function draw() {
-  // 背景（如果圖片失敗就畫綠色）
-  if (bgImage.complete && bgImage.naturalWidth !== 0) {
-    ctx.drawImage(bgImage, 0, 0, canvas.width, canvas.height);
-  } else {
-    ctx.fillStyle = "#4caf50";
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-  }
+  ctx.drawImage(bgImage, 0, 0, canvas.width, canvas.height);
 
-  // 河
   ctx.fillStyle = "rgba(33,150,243,0.4)";
   ctx.fillRect(0, river.y, canvas.width, river.height);
 
-  // 海獺
   const floatY = Math.sin(otter.float) * 4;
-  if (otterImage.complete && otterImage.naturalWidth !== 0) {
-    ctx.drawImage(
-      otterImage,
-      otter.x,
-      otter.y + floatY,
-      otter.width,
-      otter.height
-    );
-  } else {
-    ctx.fillStyle = "#6d4c41";
-    ctx.fillRect(otter.x, otter.y, otter.width, otter.height);
-  }
+  ctx.drawImage(
+    otterImage,
+    otter.x,
+    otter.y + floatY,
+    otter.width,
+    otter.height
+  );
 }
 
 function loop() {
@@ -99,11 +100,6 @@ function loop() {
   draw();
   requestAnimationFrame(loop);
 }
-
-bgImage.onerror = () => console.error("❌ 背景圖片載入失敗");
-otterImage.onerror = () => console.error("❌ 海獺圖片載入失敗");
-
-loop();
 </script>
 
 </body>
