--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
-<!DOCTYPE html> <html lang="zh-Hant"> <head> <meta charset="UTF-8"> <title>叢林裡的海獺</title> <style> body {   margin: 0;   background: #111;   display: flex;   justify-content: center;   align-items: center;   height: 100vh; } canvas {   border: 2px solid #000;   background: #2e7d32; } </style> </head> <body>  <canvas id="game" width="900" height="550"></canvas>  <script> const canvas = document.getElementById("game"); const ctx = canvas.getContext("2d");  // ⚠️ 請依你實際檔名修改這裡 const bgImage = new Image(); bgImage.src = "images/jungle.jfif";  const otterImage = new Image(); otterImage.src = "images/otter.jfif";  // 河 const river = { y: 260, height: 120 };  // 海獺 const otter = {   x: 400,   y: 290,   width: 90,   height: 60,   speed: 4,   float: 0 };  const keys = {}; window.addEventListener("keydown", e => keys[e.key] = true); window.addEventListener("keyup", e => keys[e.key] = false);  function update() {   if (keys["ArrowLeft"]) otter.x -= otter.speed;   if (keys["ArrowRight"]) otter.x += otter.speed;   if (keys["ArrowUp"]) otter.y -= otter.speed;   if (keys["ArrowDown"]) otter.y += otter.speed;    otter.x = Math.max(0, Math.min(canvas.width - otter.width, otter.x));   otter.y = Math.max(     river.y,     Math.min(river.y + river.height - otter.height, otter.y)   );    otter.float += 0.05; }  function draw() {   // 背景（如果圖片失敗就畫綠色）   if (bgImage.complete && bgImage.naturalWidth !== 0) {     ctx.drawImage(bgImage, 0, 0, canvas.width, canvas.height);   } else {     ctx.fillStyle = "#4caf50";     ctx.fillRect(0, 0, canvas.width, canvas.height);   }    // 河   ctx.fillStyle = "rgba(33,150,243,0.4)";   ctx.fillRect(0, river.y, canvas.width, river.height);    // 海獺   const floatY = Math.sin(otter.float) * 4;   if (otterImage.complete && otterImage.naturalWidth !== 0) {     ctx.drawImage(       otterImage,       otter.x,       otter.y + floatY,       otter.width,       otter.height     );   } else {     ctx.fillStyle = "#6d4c41";     ctx.fillRect(otter.x, otter.y, otter.width, otter.height);   } }  function loop() {   update();   draw();   requestAnimationFrame(loop); }  bgImage.onerror = () => console.error("❌ 背景圖片載入失敗"); otterImage.onerror = () => console.error("❌ 海獺圖片載入失敗");  loop(); </script>  </body> </html>
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+<meta charset="UTF-8">
+<title>叢林裡的海獺</title>
+<style>
+body {
+  margin: 0;
+  background: #111;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+canvas {
+  border: 2px solid #000;
+  background: #2e7d32;
+}
+</style>
+</head>
+<body>
+
+<canvas id="game" width="900" height="550"></canvas>
+
+<script>
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
+
+// ⚠️ 請依你實際檔名修改這裡
+const bgImage = new Image();
+bgImage.src = "images/jungle.jfif";
+
+const otterImage = new Image();
+otterImage.src = "images/otter.jfif";
+
+// 河
+const river = { y: 260, height: 120 };
+
+// 海獺
+const otter = {
+  x: 400,
+  y: 290,
+  width: 90,
+  height: 60,
+  speed: 4,
+  float: 0
+};
+
+const keys = {};
+window.addEventListener("keydown", e => keys[e.key] = true);
+window.addEventListener("keyup", e => keys[e.key] = false);
+
+function update() {
+  if (keys["ArrowLeft"]) otter.x -= otter.speed;
+  if (keys["ArrowRight"]) otter.x += otter.speed;
+  if (keys["ArrowUp"]) otter.y -= otter.speed;
+  if (keys["ArrowDown"]) otter.y += otter.speed;
+
+  otter.x = Math.max(0, Math.min(canvas.width - otter.width, otter.x));
+  otter.y = Math.max(
+    river.y,
+    Math.min(river.y + river.height - otter.height, otter.y)
+  );
+
+  otter.float += 0.05;
+}
+
+function draw() {
+  // 背景（如果圖片失敗就畫綠色）
+  if (bgImage.complete && bgImage.naturalWidth !== 0) {
+    ctx.drawImage(bgImage, 0, 0, canvas.width, canvas.height);
+  } else {
+    ctx.fillStyle = "#4caf50";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+  }
+
+  // 河
+  ctx.fillStyle = "rgba(33,150,243,0.4)";
+  ctx.fillRect(0, river.y, canvas.width, river.height);
+
+  // 海獺
+  const floatY = Math.sin(otter.float) * 4;
+  if (otterImage.complete && otterImage.naturalWidth !== 0) {
+    ctx.drawImage(
+      otterImage,
+      otter.x,
+      otter.y + floatY,
+      otter.width,
+      otter.height
+    );
+  } else {
+    ctx.fillStyle = "#6d4c41";
+    ctx.fillRect(otter.x, otter.y, otter.width, otter.height);
+  }
+}
+
+function loop() {
+  update();
+  draw();
+  requestAnimationFrame(loop);
+}
+
+bgImage.onerror = () => console.error("❌ 背景圖片載入失敗");
+otterImage.onerror = () => console.error("❌ 海獺圖片載入失敗");
+
+loop();
+</script>
+
+</body>
+</html>
